--- a/day05/Cargo.toml
+++ b/day05/Cargo.toml
@@ -3,4 +3,12 @@ name = "day05"
 version = "0.1.0"
 authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
 
+[lib]
+name = "day05lib"
+path = "src/lib.rs"
+
+[[bin]]
+name = "day05bin"
+path = "src/main.rs"
+
 [dependencies]
