--- a/day07/Cargo.toml
+++ b/day07/Cargo.toml
@@ -3,4 +3,12 @@ name = "day07"
 version = "0.1.0"
 authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
 
+[lib]
+name = "day07lib"
+path = "src/lib.rs"
+
+[[bin]]
+name = "day07bin"
+path = "src/main.rs"
+
 [dependencies]
