--- a/day08/Cargo.toml
+++ b/day08/Cargo.toml
@@ -3,4 +3,12 @@ name = "day08"
 version = "0.1.0"
 authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
 
+[lib]
+name = "day08lib"
+path = "src/lib.rs"
+
+[[bin]]
+name = "day08bin"
+path = "src/main.rs"
+
 [dependencies]
