--- a/day10/Cargo.toml
+++ b/day10/Cargo.toml
@@ -3,4 +3,12 @@ name = "day10"
 version = "0.1.0"
 authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
 
+[lib]
+name = "day10lib"
+path = "src/lib.rs"
+
+[[bin]]
+name = "day10bin"
+path = "src/main.rs"
+
 [dependencies]
