--- a/day11/Cargo.toml
+++ b/day11/Cargo.toml
@@ -3,4 +3,12 @@ name = "day11"
 version = "0.1.0"
 authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
 
+[lib]
+name = "day11lib"
+path = "src/lib.rs"
+
+[[bin]]
+name = "day11bin"
+path = "src/main.rs"
+
 [dependencies]
