--- a/day13/Cargo.toml
+++ b/day13/Cargo.toml
@@ -3,4 +3,12 @@ name = "day13"
 version = "0.1.0"
 authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
 
+[lib]
+name = "day13lib"
+path = "src/lib.rs"
+
+[[bin]]
+name = "day13bin"
+path = "src/main.rs"
+
 [dependencies]
