--- a/day14/Cargo.toml
+++ b/day14/Cargo.toml
@@ -3,4 +3,12 @@ name = "day14"
 version = "0.1.0"
 authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
 
+[lib]
+name = "day14lib"
+path = "src/lib.rs"
+
+[[bin]]
+name = "day14bin"
+path = "src/main.rs"
+
 [dependencies]
