--- a/day19/Cargo.toml
+++ b/day19/Cargo.toml
@@ -3,4 +3,12 @@ name = "day19"
 version = "0.1.0"
 authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
 
+[lib]
+name = "day19lib"
+path = "src/lib.rs"
+
+[[bin]]
+name = "day19bin"
+path = "src/main.rs"
+
 [dependencies]
