--- a/day23/Cargo.toml
+++ b/day23/Cargo.toml
@@ -3,4 +3,12 @@ name = "day23"
 version = "0.1.0"
 authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
 
+[lib]
+name = "day23lib"
+path = "src/lib.rs"
+
+[[bin]]
+name = "day23bin"
+path = "src/main.rs"
+
 [dependencies]
