--- a/day09/Cargo.toml
+++ b/day09/Cargo.toml
@@ -15,3 +15,10 @@ path = "src/main.rs"
 util = { path = "../util" }
 num-bigint = "0.1.35"
 num-traits = "0.1.36"
+
+[features]
+# no features by default
+default = []
+
+# debug-output depends on nothing else
+debug_output = []
