--- a/day10/Cargo.toml
+++ b/day10/Cargo.toml
@@ -2,6 +2,7 @@
 name = "day10"
 version = "0.1.0"
 authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
+build = "build.rs" # LALRPOP preprocessing
 
 [lib]
 name = "day10lib"
@@ -12,5 +13,11 @@ name = "day10bin"
 path = "src/main.rs"
 
 [dependencies]
-nom = "^2.0"
 util = { path = "../util" }
+
+# Add a dependency on the LALRPOP runtime library:
+[dependencies.lalrpop-util]
+version = "0.12.4"
+
+[build-dependencies.lalrpop]
+version = "0.12.4"
