--- a/day04/Cargo.toml
+++ b/day04/Cargo.toml
@@ -12,7 +12,7 @@ name = "day04bin"
 path = "src/main.rs"
 
 [dependencies]
-regex = "0.2"
-lazy_static = "0.1.*"
-counter = "0.1"
+regex = "1.5.4"
+lazy_static = "1.4.0"
+counter = "0.5.2"
 util = { path = "../util" }
