--- a/day10/Cargo.toml
+++ b/day10/Cargo.toml
@@ -14,10 +14,7 @@ path = "src/main.rs"
 
 [dependencies]
 util = { path = "../util" }
+lalrpop-util = "0.19.5"
 
-# Add a dependency on the LALRPOP runtime library:
-[dependencies.lalrpop-util]
-version = "0.12.4"
-
-[build-dependencies.lalrpop]
-version = "0.12.4"
+[build-dependencies]
+lalrpop = "0.19.5"
