--- a/util/Cargo.toml
+++ b/util/Cargo.toml
@@ -2,5 +2,6 @@
 name = "util"
 version = "0.1.0"
 authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
+edition = "2018"
 
 [dependencies]
