--- a/day04/Cargo.toml
+++ b/day04/Cargo.toml
@@ -2,14 +2,7 @@
 name = "day04"
 version = "0.1.0"
 authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
-
-[lib]
-name = "day04lib"
-path = "src/lib.rs"
-
-[[bin]]
-name = "day04bin"
-path = "src/main.rs"
+edition = "2018"
 
 [dependencies]
 regex = "1.5.4"
