--- a/day09/Cargo.toml
+++ b/day09/Cargo.toml
@@ -2,14 +2,7 @@
 name = "day09"
 version = "0.1.0"
 authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
-
-[lib]
-name = "day09lib"
-path = "src/lib.rs"
-
-[[bin]]
-name = "day09bin"
-path = "src/main.rs"
+edition = "2018"
 
 [dependencies]
 util = { path = "../util" }
