--- a/day02/Cargo.toml
+++ b/day02/Cargo.toml
@@ -5,5 +5,8 @@ authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-util = { path = "../util" }
-lazy_static = "1.4.0"
+aoclib = { git = "https://github.com/coriolinus/aoclib.git" }
+color-eyre = "0.5.11"
+parse-display = "0.4.1"
+structopt = "0.3.21"
+thiserror = "1.0.24"
