--- a/day04/Cargo.toml
+++ b/day04/Cargo.toml
@@ -5,6 +5,11 @@ authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-regex = "1.5.4"
-lazy_static = "1.4.0"
+aoclib = { git = "https://github.com/coriolinus/aoclib.git" }
+color-eyre = "0.5.11"
 counter = "0.5.2"
+lazy_static = "1.4.0"
+parse-display = "0.4.1"
+regex = "1.5.4"
+structopt = "0.3.21"
+thiserror = "1.0.24"
