--- a/day05/Cargo.toml
+++ b/day05/Cargo.toml
@@ -5,4 +5,14 @@ authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+aoclib = { git = "https://github.com/coriolinus/aoclib.git" }
+color-eyre = "0.5.11"
+parse-display = "0.5.0"
+rayon = { version = "1.5.1", optional = true }
 rust-crypto = "0.2.36"
+structopt = "0.3.21"
+thiserror = "1.0.24"
+
+[features]
+default = []
+parallelism = ["rayon"]
