--- a/day06/Cargo.toml
+++ b/day06/Cargo.toml
@@ -5,4 +5,8 @@ authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+aoclib = { git = "https://github.com/coriolinus/aoclib.git" }
+color-eyre = "0.5.11"
 counter = "0.5.2"
+structopt = "0.3.21"
+thiserror = "1.0.24"
