--- a/day08/Cargo.toml
+++ b/day08/Cargo.toml
@@ -5,3 +5,8 @@ authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+aoclib = { git = "https://github.com/coriolinus/aoclib.git" }
+color-eyre = "0.5.11"
+parse-display = "0.5.0"
+structopt = "0.3.21"
+thiserror = "1.0.24"
