--- a/day09/Cargo.toml
+++ b/day09/Cargo.toml
@@ -5,12 +5,9 @@ authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+aoclib = { git = "https://github.com/coriolinus/aoclib.git" }
+color-eyre = "0.5.11"
 num-bigint = "0.4.0"
 num-traits = "0.2.14"
-
-[features]
-# no features by default
-default = []
-
-# debug-output depends on nothing else
-debug_output = []
+structopt = "0.3.21"
+thiserror = "1.0.24"
