--- a/day10/Cargo.toml
+++ b/day10/Cargo.toml
@@ -2,11 +2,14 @@
 name = "day10"
 version = "0.1.0"
 authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
-build = "build.rs" # LALRPOP preprocessing
 edition = "2018"
 
 [dependencies]
-lalrpop-util = "0.19.5"
+aoclib = { git = "https://github.com/coriolinus/aoclib.git" }
+color-eyre = "0.5.11"
+parse-display = "0.5.0"
+structopt = "0.3.21"
+thiserror = "1.0.24"
 
-[build-dependencies]
-lalrpop = "0.19.5"
+[dev-dependencies]
+maplit = "1.0.2"
