--- a/day11/Cargo.toml
+++ b/day11/Cargo.toml
@@ -5,4 +5,14 @@ authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-itertools = "0.10.0"
+aoclib = { git = "https://github.com/coriolinus/aoclib.git" }
+color-eyre = "0.5.10"
+lalrpop-util = "0.19.5"
+maplit = "1.0.2"
+parse-display = "0.5.0"
+regex = "1.5.4"
+structopt = "0.3.21"
+thiserror = "1.0.22"
+
+[build-dependencies]
+lalrpop = "0.19.5"
