rewrite day11 runner
Looks like there is already some reasonable progress towards a reasonable
solution here, but `fn isomorph` isn't working yet.

See https://www.reddit.com/r/adventofcode/comments/5hoia9/2016_day_11_solutions/db1v1ws

--- a/day11/Cargo.toml
+++ b/day11/Cargo.toml
@@ -5,4 +5,7 @@ authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+color-eyre = "0.5.11"
 itertools = "0.10.0"
+structopt = "0.3.21"
+thiserror = "1.0.24"
