--- a/day11/Cargo.toml
+++ b/day11/Cargo.toml
@@ -8,3 +8,7 @@ edition = "2018"
 color-eyre = "0.5.11"
 structopt = "0.3.21"
 thiserror = "1.0.24"
+
+[dev-dependencies]
+enum-iterator = "0.6.0"
+rand = "0.8.3"
