--- a/day11/Cargo.toml
+++ b/day11/Cargo.toml
@@ -5,4 +5,11 @@ authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+color-eyre = "0.5.11"
 itertools = "0.10.0"
+structopt = "0.3.21"
+thiserror = "1.0.24"
+
+[dev-dependencies]
+enum-iterator = "0.6.0"
+rand = "0.8.3"
