--- a/day20/Cargo.toml
+++ b/day20/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 [dependencies]
 aoclib = { git = "https://github.com/coriolinus/aoclib.git" }
 color-eyre = "0.5.10"
+itertools = "0.10.0"
 parse-display = "0.5.0"
 structopt = "0.3.21"
 thiserror = "1.0.22"
