--- a/day22/Cargo.toml
+++ b/day22/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 aoclib = { git = "https://github.com/coriolinus/aoclib.git" }
 color-eyre = "0.5.10"
 lazy_static = "1.4.0"
+parse-display = "0.5.0"
 regex = "1.5.4"
 structopt = "0.3.21"
 thiserror = "1.0.22"
