--- a/day12/Cargo.toml
+++ b/day12/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2018"
 
 [dependencies]
 aoclib = { git = "https://github.com/coriolinus/aoclib.git" }
+assembunny = { path = "../assembunny" }
 color-eyre = "0.5.10"
 parse-display = "0.5.0"
 structopt = "0.3.21"
